wasm_parser/src/snapshots/wasm_parser__tests__arithmetic.wasm.snap
---
source: wasm_parser/src/lib.rs
expression: "format!(\"{:#?}\", ast)"
---
Module {
    sections: [
        Type(
            TypeSection {
                entries: [
                    FunctionSignature {
                        param_types: [
                            I32,
                            I32,
                            I32,
                            I32,
                            I32,
                        ],
                        return_types: [],
                    },
                    FunctionSignature {
                        param_types: [
                            F64,
                            F64,
                        ],
                        return_types: [
                            F64,
                        ],
                    },
                ],
            },
        ),
        Function(
            FunctionSection {
                types: [
                    0,
                    0,
                    1,
                ],
            },
        ),
        Memory(
            MemorySection {
                entries: [
                    MemoryType {
                        limits: Zero(
                            17,
                        ),
                    },
                ],
            },
        ),
        Export(
            ExportSection {
                entries: [
                    ExportEntry {
                        name: "memory",
                        kind: Memory {
                            ty: 0,
                        },
                    },
                    ExportEntry {
                        name: "sub_i64",
                        kind: Function {
                            ty: 0,
                        },
                    },
                    ExportEntry {
                        name: "mult_i64",
                        kind: Function {
                            ty: 1,
                        },
                    },
                    ExportEntry {
                        name: "div",
                        kind: Function {
                            ty: 2,
                        },
                    },
                ],
            },
        ),
        Code(
            CodeSection {
                entries: [
                    FunctionBody {
                        locals: [
                            LocalEntry {
                                count: 1,
                                ty: I64,
                            },
                        ],
                        code: [
                            OP_LOCAL_GET(
                                0,
                            ),
                            OP_LOCAL_GET(
                                1,
                            ),
                            OP_I64_EXTEND_I32_U,
                            OP_LOCAL_GET(
                                2,
                            ),
                            OP_I64_EXTEND_I32_U,
                            OP_I64_CONST(
                                32,
                            ),
                            OP_I64_SHL,
                            OP_I64_OR,
                            OP_LOCAL_GET(
                                3,
                            ),
                            OP_I64_EXTEND_I32_U,
                            OP_LOCAL_GET(
                                4,
                            ),
                            OP_I64_EXTEND_I32_U,
                            OP_I64_CONST(
                                32,
                            ),
                            OP_I64_SHL,
                            OP_I64_OR,
                            OP_I64_SUB,
                            OP_LOCAL_TEE(
                                5,
                            ),
                            OP_I64_STORE_32(
                                MemArg {
                                    align: 2,
                                    offset: 0,
                                },
                            ),
                            OP_LOCAL_GET(
                                0,
                            ),
                            OP_LOCAL_GET(
                                5,
                            ),
                            OP_I64_CONST(
                                32,
                            ),
                            OP_I64_SHR_U,
                            OP_I64_STORE_32(
                                MemArg {
                                    align: 2,
                                    offset: 4,
                                },
                            ),
                        ],
                    },
                    FunctionBody {
                        locals: [
                            LocalEntry {
                                count: 1,
                                ty: I64,
                            },
                        ],
                        code: [
                            OP_LOCAL_GET(
                                0,
                            ),
                            OP_LOCAL_GET(
                                3,
                            ),
                            OP_I64_EXTEND_I32_U,
                            OP_LOCAL_GET(
                                4,
                            ),
                            OP_I64_EXTEND_I32_U,
                            OP_I64_CONST(
                                32,
                            ),
                            OP_I64_SHL,
                            OP_I64_OR,
                            OP_LOCAL_GET(
                                1,
                            ),
                            OP_I64_EXTEND_I32_U,
                            OP_LOCAL_GET(
                                2,
                            ),
                            OP_I64_EXTEND_I32_U,
                            OP_I64_CONST(
                                32,
                            ),
                            OP_I64_SHL,
                            OP_I64_OR,
                            OP_I64_MUL,
                            OP_LOCAL_TEE(
                                5,
                            ),
                            OP_I64_STORE_32(
                                MemArg {
                                    align: 2,
                                    offset: 0,
                                },
                            ),
                            OP_LOCAL_GET(
                                0,
                            ),
                            OP_LOCAL_GET(
                                5,
                            ),
                            OP_I64_CONST(
                                32,
                            ),
                            OP_I64_SHR_U,
                            OP_I64_STORE_32(
                                MemArg {
                                    align: 2,
                                    offset: 4,
                                },
                            ),
                        ],
                    },
                    FunctionBody {
                        locals: [],
                        code: [
                            OP_LOCAL_GET(
                                0,
                            ),
                            OP_LOCAL_GET(
                                1,
                            ),
                            OP_F64_DIV,
                        ],
                    },
                ],
            },
        ),
        Custom(
            CustomSection {
                name: "producers",
            },
        ),
    ],
}
