wasm_parser/src/snapshots/wasm_parser__tests__empty.wasm.snap
---
source: wasm_parser/src/lib.rs
expression: "format!(\"{:#?}\", ast)"
---
Module {
    sections: [
        Type(
            TypeSection {
                entries: [
                    FunctionSignature {
                        param_types: [
                            I32,
                            I32,
                        ],
                        return_types: [
                            I32,
                        ],
                    },
                ],
            },
        ),
        Function(
            FunctionSection {
                types: [
                    0,
                ],
            },
        ),
        Memory(
            MemorySection {
                entries: [
                    MemoryType {
                        limits: Zero(
                            17,
                        ),
                    },
                ],
            },
        ),
        Export(
            ExportSection {
                entries: [
                    ExportEntry {
                        name: "memory",
                        kind: Memory {
                            ty: 0,
                        },
                    },
                    ExportEntry {
                        name: "add",
                        kind: Function {
                            ty: 0,
                        },
                    },
                ],
            },
        ),
        Code(
            CodeSection {
                entries: [
                    FunctionBody {
                        locals: [],
                        code: [
                            InstructionWrapper {
                                instruction_id: 1,
                                instruction: OP_LOCAL_GET(
                                    0,
                                ),
                            },
                            InstructionWrapper {
                                instruction_id: 2,
                                instruction: OP_LOCAL_GET(
                                    1,
                                ),
                            },
                            InstructionWrapper {
                                instruction_id: 3,
                                instruction: OP_I32_ADD,
                            },
                        ],
                    },
                ],
            },
        ),
        Custom(
            CustomSection {
                name: "producers",
            },
        ),
    ],
}
